--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,29 @@
   height: 100%;
   width: 100%;
 }
+
+.Suggestion {
+  position: absolute;
+  width: 250px;
+  left: 520px;
+  margin: 10px;
+  font-size: 20px;
+  color: black;
+  background-color: white;
+  z-index: 100;
+  border-radius: 25px;
+  background: #73AD21;
+  padding: 20px;
+}
+
+.Position2 {
+  top: 75px
+}
+
+.Position3 {
+  top: 150px
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
